<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_luas"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#03A9F4"
        android:text="@string/luas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_kal" />

    <Button
        android:id="@+id/btn_recycler"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#4CAF50"
        android:text="@string/recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_luas" />

    <Button
        android:id="@+id/btn_kal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="#E91E63"
        android:text="@string/kalkulator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_browser"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FF9800"
        android:text="@string/browser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_recycler" />
</androidx.constraintlayout.widget.ConstraintLayout>